fixed font size too big

--- a/style.scss
+++ b/style.scss
@@ -11,8 +11,7 @@ $LightGrey: hsl(0, 0%, 86%);
 $SmokeyGrey: hsl(0, 1%, 44%);
 $OffBlack: hsl(0, 0%, 8%);
 // App Width //
-$Mobile: 375px;
-$Desktop: 1440px;
+
 
 *,
 *::before, 
@@ -103,18 +102,14 @@ body {
       }
 
     .results-container {
-      width: 80%;
-      max-height: 50%;
-      aspect-ratio: 1;
+      width: 100%;
       display: grid;
       grid-template-columns: 1fr 3fr;
       grid-template-rows: repeat(3, 1fr);
       align-items: center;
-      align-content: stretch;
       font-weight: 800;
-      font-size: clamp(2rem, 3.5vw, 4rem);
+      font-size: 2.35rem;
       font-style: italic;
-      column-gap: 15px;
 
       .results {
         color: $Purple;
@@ -122,8 +117,6 @@ body {
 
       .results-label {
         color: $OffBlack;
-        // border-left: .5px solid $LightGrey;
-        // padding-left: 5px;
       }
     }
 };
